<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/splash_background"
    tools:context="com.example.movieapp.LoginActivity">

    <EditText
        android:hint="@string/password_hint"
        android:layout_width="wrap_content"
        android:inputType="textPassword"
        android:ems="50"
        android:id="@+id/password"
        android:textSize="18sp"
        android:background="@drawable/button_rounded_corners"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_height="45dp" />

    <EditText
        android:hint="@string/email_hint"
        android:layout_width="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="50"
        android:background="@drawable/button_rounded_corners"
        android:id="@+id/email"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"
        android:layout_above="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_height="45dp" />

    <ImageView
        android:layout_width="100dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="50dp"
        android:id="@+id/app_logo"
        android:contentDescription="@string/app_name"
        android:layout_above="@+id/email"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:layout_height="100dp" />

    <Button
        android:text="@string/register_button"
        android:id="@+id/register_button"
        android:onClick="onRegisterClick"
        android:background="@drawable/button_rounded_corners"
        android:layout_marginTop="79dp"
        android:layout_height="35dp"
        android:textSize="18sp"
        android:layout_width="150dp"
        android:layout_below="@+id/password"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="14dp" />

    <Button
        android:text="@string/login_button"
        android:id="@+id/login_button"
        android:onClick="onLoginClick"
        android:background="@drawable/button_rounded_corners"
        android:layout_height="35dp"
        android:textSize="18sp"
        android:layout_width="150dp"
        android:layout_alignBottom="@+id/register_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp" />

    <Button
        android:text="Show Database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_showDatabase"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/register_button"
        android:layout_marginBottom="29dp"
        android:onClick="onShowDatabase"
        />

    <CheckBox
        android:text="@string/stay_logged"
        android:layout_marginTop="14dp"
        android:id="@+id/checkbox_signed"
        android:layout_height="35dp"
        android:layout_width="150dp"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true" />

</RelativeLayout>
