<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/splash_background"
    tools:context="com.example.movieapp.RegisterActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:ems="50"
        android:id="@+id/password_register"
        android:background="@drawable/button_rounded_corners"
        android:hint="@string/register_password2"
        android:layout_below="@+id/password_register2"
        android:layout_alignStart="@+id/password_register2"
        android:layout_marginTop="17dp" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:inputType="textEmailAddress"
        android:ems="50"
        android:background="@drawable/button_rounded_corners"
        android:id="@+id/register_email"
        android:hint="@string/register_email"
        android:layout_below="@+id/register_name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />

    <Spinner
        android:id="@+id/movie_type"
        android:background="@drawable/button_rounded_corners"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:entries="@array/movie_types"
        android:layout_below="@+id/password_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:ems="50"
        android:background="@drawable/button_rounded_corners"
        android:id="@+id/password_register2"
        android:hint="@string/register_password1"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/register_email"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_birthday"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:onClick="setBirthday"
        android:text="@string/set_birthday"
        android:background="@drawable/button_rounded_corners"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/movie_type"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />

    <Button
        android:text="@string/register_button"
        android:layout_width="120dp"
        android:id="@+id/button"
        android:onClick="onRegisterComplete"
        android:background="@drawable/button_rounded_corners"
        android:textSize="18sp"
        android:layout_height="35dp"
        android:layout_below="@+id/button_birthday"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:inputType="textPersonName"
        android:ems="50"
        android:background="@drawable/button_rounded_corners"
        android:id="@+id/register_name"
        android:hint="@string/register_name"
        android:layout_marginTop="93dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
